# cv-pipeline

./: .gitignore  CMakeLists.txt  README.md  conan_install.sh  conanfile.txt
doc/: create_custom_image_processor.md  execute_pipeline.md
gui_qt/: .gitignore  CMakeLists.txt  FrameSourceNavigationWidget.cpp  FrameSourceNavigationWidget.h  ProcessorWidget.cpp  ProcessorWidget.h  Utils.cpp  Utils.h  main.cpp  mainwindow.cpp  mainwindow.h  qlabelmat.cpp  qlabelmat.h  qwidgethandler.cpp  qwidgethandler.h
image_processors/: AdaptiveThreshold.cpp  AdaptiveThreshold.h  CMakeLists.txt  ColorSpace.cpp  ColorSpace.h  Convolution.cpp  Convolution.h  Mosaic.cpp  Registerer.cpp  Registerer.h  ResizeImage.cpp  ResizeImage.h  Roi.cpp  Roi.h
src/: CMakeLists.txt  Factory.h  FrameSource.h  FrameSourceFactory.cpp  FrameSourceFactory.h  ImageFrameSource.cpp  ImageFrameSource.h  ImageProcessor.cpp  ImageProcessor.h  JsonStorage.cpp  JsonStorage.h  Notifier.cpp  Notifier.h  Observer.h  PipelineConfiguration.h  PipelineController.cpp  PipelineController.h  ProcessorConfiguration.cpp  ProcessorConfiguration.h  ProcessorParameters.cpp  ProcessorParameters.h  Runnable.cpp  Runnable.h  VideoFrameSource.cpp  VideoFrameSource.h
src/ImageProcessors/: CMakeLists.txt  CannyEdgeDetector.cpp  CannyEdgeDetector.h  ColorSpace.cpp  ColorSpace.h  Convolution.cpp  Convolution.h  GaborFilter.cpp  GaborFilter.h  HoughLines.cpp  HoughLines.h  Mosaic.cpp  Mosaic.h  Registerer.cpp  Registerer.h  ResizeImage.cpp  ResizeImage.h  Roi.cpp  Roi.h  Utils.cpp  Utils.h
src/ImageProcessors/threshold/: AdaptiveThreshold.cpp  AdaptiveThreshold.h  Percentile.cpp  Percentile.h  Threshold.cpp  Threshold.h
test/: Acceptance.test.cpp  CMakeLists.txt  Factory.test.cpp  FrameSourceFactory.Test.cpp  ImageFrameSource.Test.cpp  JsonStorage.Test.cpp  PipelineController.Test.cpp  ProcessorConfiguration.Test.cpp  ProcessorParameters.Test.cpp  Runnable.Test.cpp  VideoFrameSource.Test.cpp  main.test.cpp
test/ImageProcessors/: Mosaic.Test.cpp
test/fixtures/json/: acceptance_configuration.json  configuration.json
